--- a/css/style.css
+++ b/css/style.css
@@ -489,3 +489,12 @@
     padding-right: 0;
     border-right: none;
 }
+
+
+.navbar2 {
+    overflow: hidden;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    z-index: 5;
+  }
+  
